# Generated by Django 5.2.4 on 2025-07-30 03:26

import datetime
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('usuarios', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Marca',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Modelo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=50)),
                ('marca', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='modelo', to='vehiculos.marca')),
            ],
        ),
        migrations.CreateModel(
            name='Vehiculo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('año', models.PositiveIntegerField()),
                ('dominio', models.CharField(max_length=7, unique=True)),
                ('intervalo_servicio_km', models.IntegerField(default=10000)),
                ('intervalo_servicio_tiempo', models.DurationField(default=datetime.timedelta(days=365))),
                ('fecha_prox_servicio', models.DateField(blank=True, null=True)),
                ('kilometraje_prox_servicio', models.IntegerField(blank=True, null=True)),
                ('modelo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='vehiculos', to='vehiculos.modelo')),
                ('propietario', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='vehiculos', to='usuarios.cliente')),
            ],
        ),
    ]
