@startuml Autolog
skinparam classAttributeIconSize 0

class Vehiculo {
  - año: Integer
  - dominio: String
  
  
  + calcularFechaProxService(): Date
  + calcularKmProxService(): Integer
  + asignarMarca()
  + asignarModelo()
}
class Marca {
  marca: String
}

class Modelo {
  modelo: String
}
class Usuario {
  - nombre: String
  - apellido: String
  - telefono: String
  - mail: String
  - direccion: String
}

class OrdenDeTrabajo {
  
  - fechaTurno : Date
  - fechaEntrega: Date
  - kilometraje: Integer
  - fechaSiguienteServicio: Date
  - observacionesTecnicas: String

  
}

class Taller {
  - telefono: String
  - direccion: String
 
}
class Cliente {
  + otorgarPermisoDeAcceso()
}
class AdministradorTecnico {
    
    
    + crearOT()
    + crearCliente()
    + crearVehiculo()
}

class SuperUsuario {
    + configurarAgenda()
    + configurarPracticaMantenimiento()
}


class PermisoDeAcceso {
  - fechaAutorizacion: Date
  - estado: String
}

class PracticaMantenimiento {
  - nombre: String
  - tipo: String
  - frecuenciaKm: Integer
  - frecuenciaTiempo: Integer
  - instrucciones: String
}

class Presupuesto {
  - repuestos: String
  - precio: Float
  - vigencia: Date
  - estado: String
}

class Agenda {
  - diasLaborales: List<String>
  - horarioDesde: Time
  - horarioHasta: Time
  - turnosMaximosPorHora: Integer

  + mostrarTurnosAsignados(Fecha, Hora): List<Turno>
  + mostrarDisponibilidad(Semana): List<Turno>
}


' Relaciones
Cliente "1"--> "1*" Usuario
AdministradorTecnico "1"--> "1*" Usuario
Cliente "1" --> "0..*" Vehiculo : vehiculosPropios >
Cliente "1" --> "0..*" PermisoDeAcceso : clienteAutorizado >

AdministradorTecnico <|-- SuperUsuario

Vehiculo "1" --> "0..*" OrdenDeTrabajo : historial >
Vehiculo "0..*" --> "1" Modelo: es modelo > 

Modelo "0..*"--> "1" Marca: marca>

OrdenDeTrabajo "1" --> "1" AdministradorTecnico : referenteTecnico >
OrdenDeTrabajo "1" --> "1" PracticaMantenimiento : practica >
OrdenDeTrabajo "1" --> "1" Presupuesto : presupuesto >

Taller "1" <--> "0..*" OrdenDeTrabajo : ordenesPropias >
Taller "1" --> "1" SuperUsuario : superUsuario >
Taller "1" --> "0..*" AdministradorTecnico : usuario >
Taller "1" --> "1" Agenda : tiene >


PermisoDeAcceso "1" --> "1" Vehiculo : vehiculoAutorizados >
Taller "1" --> "1" PermisoDeAcceso : tallerAutorizado >

Agenda "1" --> "0..*" OrdenDeTrabajo : fecha asignada >

Presupuesto "1" --> "0..*" PracticaMantenimiento : contiene

@enduml